## Workpattern v0.3.0.beta (MMM DD, YYYY)  ##

* available minutes not calculating correctly for a time of 00:01 (#6) * Barrie Callender *

## Workpattern v0.2.0 (May 31, 2012)  ##

*   Rewritten from scratch effectively first version * Barrie Callender *
* Please discard any version of Workpattern before this - some poor souls may have come across v0.1.0. - sorry! * Barrie Callender *